src/assets/css/components/composition.css
@block composition {
  @apply tw-relative;

  @element photo {
    width: 55%;
    outline-offset: 0.5rem;

    transition: all 0.4s;
    backface-visibility: hidden; /* else elm moves slightly down 
  at the end of the animation */

    @apply tw-shadow-md tw-absolute;

    @modifier p1 {
      top: -2rem;
      @apply tw-pin-l;
    }

    @modifier p2 {
      top: 2rem;
      @apply tw-pin-r;
    }

    @modifier p3 {
      top: 6rem;
      @apply .mu-position-center-justify;

      &:hover {
        left: 50%;
        transform: translateX(-50%) translateY(-1rem) scale(1.05);
        @apply tw-shadow-lg;
      }
    }

    &:hover {
      outline: 1rem solid $color-theme;
      transform: translateY(-1rem) scale(1.05);
      @apply tw-shadow-lg tw-z-1;
    }
  }

  &:hover .composition__photo:not(:hover):not([class$="p3"]) {
    transform: scale(0.9);
  }

  &:hover .composition__photo:not(:hover)[class$="--p3"] {
    left: 50%;
    transform: translateX(-50%) scale(0.9);
  }
}

